source/style/class/year.scss
.year {
  
  title {
    padding-left: calc(2vw + 152px);
    margin-bottom: 0;
    
    @media(max-width: 500px) {
      padding: 0;
      text-align: center;
    }
  }
  
  h2 {
    display: inline-block;
    line-height: 1.1em;
    margin: calc(5vh + 1em) 0 0;
    border-bottom: 2px solid $black;
    padding-left: calc(2vw + 152px);
    padding-bottom: .4em;

    @media(max-width: 500px) {
      display:  block;
      padding-left: 0;
      text-align: right;
      margin-left: -3vw;
    }
    
    a {
      text-decoration: none;
      margin-left: -1px;
      margin-right: -5px;
    }
  }
  
  section {
    display: flex;
    align-items: flex-start;
    margin: -1px 0 0;
    
    &:not(.related) {
      @media(max-width: 500px) {
        margin-left: -3vw;
      }
    }
    
    .image {
      flex: 0 0 auto;
      margin-right: 2vw;
      
      img {
        border: 2px solid $black;
        width: 152px;
        height: 152px;
      }
    }
    
    .info {
      flex: 0 1 auto;
      margin-top: 2vw;
      
      p {
        line-height: 1.6;
      }
      
      .continue {
        display: inline-block;
        padding: 0 .3em .2em;
        margin-left: .2em;
        text-transform: lowercase;
        font-variant: small-caps;
        border-radius: 2px;
        line-height: 1.4;
        text-decoration: none;
        letter-spacing: 1px;
        color: rgba($black, .5);
        border: 1px solid rgba($black, 0.1);
        
        &:hover {
          color: white;
          background-color: $black;
        }
      }
    }
    
    .meta {
      opacity: 0.7;
      margin-top: .8em;
    }
  }
  
  section.related {
    display: block;
    text-align: center;
    margin-top: calc(2vh + 4em);
    
    a {
      display: inline-block;
      font-size: 1.2em;
      padding: 0 .5em;
    }
  }
  
  // Necessary for specificity (otherwise, the above overrides this same rule from section.scss)
  title + section {
    margin-top: 0;
  }
}

